# Flecs-Rust

./: .gitattributes  .gitignore  404.html  CNAME  Cargo.toml  Makefile.toml  README.md  WASM_BINDGEN_GUIDE.md  WASM_SUPPORT.md  _typos.toml  build.rs  cargo.toml  docreplace  highlight.js  index.html  print.html  quickstart.html  searchindex.js  searchindex.json  toc.html  toc.js  typos.toml
build_tests/flecs_doc/: Cargo.toml
build_tests/flecs_journal/: Cargo.toml
build_tests/flecs_os_api_impl/: Cargo.toml
build_tests/flecs_perf_trace/: Cargo.toml
build_tests/flecs_query_rust_traits/: Cargo.toml
build_tests/flecs_timer/: Cargo.toml
build_tests/flecs_use_os_alloc/: Cargo.toml
build_tests/no_features/: Cargo.toml
flecs_ecs/: Cargo.toml  LICENSE  README.md  build.rs
flecs_ecs/.cargo/: config.toml
flecs_ecs/benches/: add_existing.rs  add_remove.rs  add_remove_operations.rs  common.rs  create_delete_entities.rs  entity.rs  event.rs  get.rs  get_operations.rs  has.rs  has_operations.rs  hooks.rs  mod.rs  observer.rs  query.rs  relationships.rs  set.rs
flecs_ecs/benches/flecs/: _main.rs  add_existing_bench.rs  add_remove_bench.rs  commands_bench.rs  common_bench.rs  create_delete_bench.rs  create_delete_entities_bench.rs  entity_bench.rs  event_bench.rs  get_bench.rs  has_bench.rs  hooks_bench.rs  observer_bench.rs  parenting_names_bench.rs  query_bench.rs  relationships_bench.rs  set_bench.rs
flecs_ecs/doc/flecs/: book.toml
flecs_ecs/examples/: _tests.rs  a_hello_world.rs  common  common.rs  entity_basics.rs  entity_hierarchy.rs  entity_hooks.rs  entity_iterate_components.rs  entity_prefab.rs  hello_world.rs  observer_basics.rs  observer_custom_event.rs  observer_entity_event.rs  observer_monitor.rs  observer_propagate.rs  observer_two_components.rs  observer_yield_existing.rs  prefab_basics.rs  prefab_hierarchy.rs  prefab_nested.rs  prefab_override.rs  prefab_slots.rs  prefab_typed.rs  prefab_variant.rs  prefabs_nested.rs  prefabs_override.rs  query_basics.rs  query_chaining_queries.rs  query_change_tracking.rs  query_find_entity.rs  query_group_by.rs  query_group_by_callbacks.rs  query_group_by_custom.rs  query_group_iter.rs  query_hierarchy.rs  query_instancing.rs  query_iter.rs  query_singleton.rs  query_sorting.rs  query_wildcard.rs  (+31 more)
flecs_ecs/examples/flecs/: a_hello_world.rs  entity_basics.rs  entity_hierarchy.rs  entity_hooks.rs  entity_iterate_components.rs  entity_prefab.rs  hello_world.rs  observer_basics.rs  observer_custom_event.rs  observer_entity_event.rs  observer_monitor.rs  observer_propagate.rs  observer_two_components.rs  observer_yield_existing.rs  prefab_basics.rs  prefab_hierarchy.rs  prefab_nested.rs  prefab_override.rs  prefab_slots.rs  prefab_typed.rs  prefab_variant.rs  query_basics.rs  query_chaining_queries.rs  query_change_tracking.rs  query_find_entity.rs  query_group_by.rs  query_group_by_callbacks.rs  query_group_by_custom.rs  query_group_iter.rs  query_hierarchy.rs  query_instancing.rs  query_iter.rs  query_singleton.rs  query_sorting.rs  query_wildcard.rs  query_with.rs  query_without.rs  query_world_query.rs  relationships_basics.rs  relationships_component_data.rs  (+30 more)
flecs_ecs/examples/snapshots/: a_hello_world__common__test.snap  entity_basics__common__test.snap  entity_hierarchy__common__test.snap  entity_hooks__common__test.snap  entity_iterate_components__common__test.snap  entity_prefab__common__test.snap  observer_basics__common__test.snap  observer_custom_event__common__test.snap  observer_entity_event__common__test.snap  observer_monitor__common__test.snap  observer_propagate__common__test.snap  observer_two_components__common__test.snap  observer_yield_existing__common__test.snap  prefab_basics__common__test.snap  prefab_hierarchy__common__test.snap  prefab_nested__common__test.snap  prefab_override__common__test.snap  prefab_slots__common__test.snap  prefab_typed__common__test.snap  prefab_variant__common__test.snap  query_basics__common__test.snap  query_chaining_queries__common__test.snap  query_change_tracking__common__test.snap  query_find_entity__common__test.snap  query_group_by__common__test.snap  query_group_by_callbacks__common__test.snap  query_group_by_custom__common__test.snap  (+91 more)
flecs_ecs/src/: component_macro.rs  decision_reasoning.txt  dsl.rs  lib.rs  main.rs  prelude.rs  sys.rs
flecs_ecs/tests/: clone_default_impl.rs  common.rs  compile_fail.rs  component_test.rs  entity_test.rs  enum.rs  eq_test.rs  is_ref.rs  query.rs  query_builder_test.rs  world.rs
flecs_ecs_bridge/: Cargo.toml
flecs_ecs_bridge/src/: lib.rs  main.rs
flecs_ecs_bridge/tests/: common.rs  entity_test.rs
flecs_ecs_derive/: Cargo.toml  LICENSE
flecs_ecs_derive/src/: component.rs  dsl.rs  extern_abi.rs  lib.rs  rust_traits.rs  tuples.rs
flecs_ecs_derive/tests/: dsl_tests.rs
flecs_ecs_sys/: Cargo.toml  build.rs
flecs_ecs_sys/src/: assert.h  bindings.rs  bindings_release.rs  execinfo.h  extension.rs  extensions.rs  flecs.c  flecs.h  flecs_rust.c  flecs_rust.h  lib.rs  mbindings.rs  stdio.h  string.h  time.h  wasm_stubs.c
flecs_ecs_sys/tests/: check_for_changes.rs
flecs_ecs_sys/wasm_shim/: libc_stubs.c
flecs_ecs_tracing/: Cargo.toml
flecs_ecs_tracing/src/: lib.rs  log.rs  metadata.rs  perf_trace.rs  util.rs
test_crash_handler/: Cargo.toml
test_crash_handler/src/: lib.rs
test_projects/flecs_test_wasm/: Cargo.toml  DEMO_README.md  Makefile.toml  README.md  SINGLE_PROJECT_GUIDE.md  UPDATE_SUMMARY.md  WHY_TWO_STAGE.md  build.rs  test_build
test_projects/test_wasm/: Cargo.toml  Makefile  Makefile.toml  build.rs  strlen.c  test.html  test.js  test_bindgen.html  test_final.js  test_simple.html  test_triangle.html  test_wasm.wasm
tools/poly_doctest/: Cargo.toml
tools/rust_doctest/: .rustfmt.toml  Cargo.toml  README.md
wasi_libc_bindgen/: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  test_usage.wasm
wasi_libc_bindgen/lib/: README.md
wasi_libc_bindgen/src/: bindings.rs  lib.rs  wrapper.h
wasm32-musl-libc/: Cargo.toml  Makefile.toml  build.rs
wasm32-musl-libc/src/: lib.rs
(+788 files in other folders)
