[workspace]
members = [
    "flecs_ecs",
    "flecs_ecs_derive",
    "flecs_ecs_sys",
    "test_crash_handler",
    "build_tests/flecs_base",
    "build_tests/no_features",
    "build_tests/flecs_module",
    "build_tests/flecs_system",
    "build_tests/flecs_pipeline",
    "build_tests/flecs_timer",
    "build_tests/flecs_os_api_impl",
    "build_tests/flecs_safety_locks",
    "build_tests/flecs_script",
    "build_tests/flecs_stats",
    "build_tests/flecs_metrics",
    "build_tests/flecs_alerts",
    "build_tests/flecs_meta",
    "build_tests/flecs_units",
    "build_tests/flecs_json",
    "build_tests/flecs_doc",
    "build_tests/flecs_log",
    "build_tests/flecs_app",
    "build_tests/flecs_http",
    "build_tests/flecs_rest",
    "build_tests/flecs_query_rust_traits",
    "build_tests/flecs_journal",
    "build_tests/flecs_term_count_64",
    "build_tests/flecs_perf_trace",
    "build_tests/flecs_rust_no_enum_reflection",
    "build_tests/flecs_use_os_alloc",
]
resolver = "2"
default-members = ["flecs_ecs", "flecs_ecs_derive", "flecs_ecs_sys"]

exclude = [
    "flecs_ecs_test",
    "docreplace"
] 

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Indra-db/Flecs-Rust"
# When changing this, update the CI as well.
rust-version = "1.88"

[workspace.lints.clippy]
doc_markdown = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
print_stderr = "warn"
print_stdout = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
unwrap_or_default = "warn"
too_many_arguments = "allow"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[workspace.lints]
rust.unused_lifetimes = "warn"

[workspace.dependencies]
flecs_ecs = { version = "0.1.2", path = "flecs_ecs" }
flecs_ecs_derive = { version = "0.1.0", path = "flecs_ecs_derive" }
flecs_ecs_sys = { version = "0.1.2", path = "flecs_ecs_sys" }
libc = "0.2.169"

[profile.release]
lto = "thin"
panic = "abort"

[profile.bench]
inherits = "release"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3