[workspace]
members = [
    "flecs_ecs",
    "flecs_ecs_derive",
    "flecs_ecs_sys",
    "test_crash_handler",
    "tools/rust_doctest",
]
resolver = "2"
default-members = ["flecs_ecs", "flecs_ecs_derive", "flecs_ecs_sys"]

exclude = [
    "docreplace",
    "flecs_ecs_test",
    "test_projects/bench_bevy_vs_flecs"
] 

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Indra-db/Flecs-Rust"
# When changing this, update the CI as well.
rust-version = "1.88"

[workspace.lints.clippy]
doc_markdown = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
print_stderr = "warn"
print_stdout = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
unwrap_or_default = "warn"
too_many_arguments = "allow"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[workspace.lints]
rust.unused_lifetimes = "warn"

[workspace.dependencies]
flecs_ecs = { version = "0.2.1", path = "flecs_ecs" }
flecs_ecs_derive = { version = "0.2.0", path = "flecs_ecs_derive" }
flecs_ecs_sys = { version = "0.2.0", path = "flecs_ecs_sys", default-features = false, features = ["flecs_meta_c"] }
libc = "0.2.175"

[profile.release]
lto = "thin"
panic = "abort"

[profile.bench]
inherits = "release"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3