[package]
name = "flecs_ecs_bridge"
version = "0.0.2"
edition = "2021"
authors = ["Indra de Backere <debackere.indra@gmail.com>"]
description = "Rust API for the C flecs ECS library <https://github.com/SanderMertens/flecs>"
license = "MIT"
keywords = ["ecs", "flecs", "entity", "component", "system"]
categories = ["game-development", "api-bindings"]

[dependencies]
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8"
debug-here = "0.2.2"
flecs_ecs_bridge_derive = { path = "../flecs_ecs_bridge_derive" }
libc = "0.2.148"

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"
regex = "1.9.5"

[features]
flecs_generate_bindings = []
flecs_systems = []
flecs_timer = []
flecs_doc = []
flecs_rest = []
flecs_meta = []
flecs_ecs_asserts = []
flecs_enable_all_asserts = ["flecs_ecs_asserts"]
default = [
    "flecs_enable_all_asserts",
    "flecs_generate_bindings",
    "flecs_systems",
    "flecs_timer",
    "flecs_doc",
    "flecs_rest",
    "flecs_meta",
]

[target.'cfg(any())'.dependencies]
flecs_ecs_bridge_derive = { version = "=0.1.0", path = "../flecs_ecs_bridge_derive" }
