[package]
name = "flecs_ecs_derive"
version = "0.2.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "A procedural macro crate for the Flecs ECS library."
rust-version.workspace = true

[lib]
proc-macro = true
name = "flecs_ecs_derive"

[lints]
workspace = true

[dependencies]
syn = { version = "2.0.110", features = ["full"] }
quote = "1.0.42"
proc-macro2 = "1.0.103"

[dev-dependencies]
flecs_ecs = { version = "0.1.2", path = "../flecs_ecs" }

[package.metadata.docs.rs]
rustdoc-args = [ "-Zunstable-options", "--generate-link-to-definition"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]

flecs_meta = []
flecs_query_rust_traits = []
std = []
default = []
