[package]
name = "flecs_ecs_sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Indra de Backere <debackere.indra@gmail.com>"]
description = "sys binding for C/CPP flecs ECS library <https://github.com/SanderMertens/flecs>"
keywords = ["flecs", "ecs", "sys"]
categories = ["External FFI bindings",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
libc = "0.2.153"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.83"
regex = "1.9.5"

[features]
regenerate_binding = []
disable_build_c_library = []
build_debug = []


# Flecs C defines / features
flecs_module = [] # Module support
flecs_parser = [] # String parser for queries
flecs_plecs = ["flecs_module", "flecs_parser", "flecs_expr"] # ECS data definition format
flecs_rules = [] # Constraint solver for advanced queries
flecs_snapshot = [] # Snapshot & restore ECS data
flecs_stats = [] # Access runtime statistics
flecs_monitor = ["flecs_stats", "flecs_system", "flecs_timer"] # Track runtime statistics periodically
flecs_metrics = ["flecs_meta", "flecs_units", "flecs_pipeline"] # Expose component data as statistics
flecs_alerts = ["flecs_rules", "flecs_pipeline"] # Monitor conditions for errors
flecs_system = ["flecs_module"] # System support
flecs_pipeline = ["flecs_module", "flecs_system"] # Pipeline support
flecs_timer = ["flecs_module", "flecs_pipeline"] # Timer support
flecs_meta = ["flecs_meta_c", "flecs_module"] # Reflection support
flecs_meta_c = [] # Utilities for populating reflection data
flecs_units = ["flecs_module", "flecs_meta"] # Builtin standard units
flecs_expr = ["flecs_meta", "flecs_parser"] # Parsing strings to/from component values
flecs_json = ["flecs_expr"] # Parsing JSON to/from component values
flecs_doc = ["flecs_module"] # Document entities & components
flecs_coredoc = ["flecs_doc", "flecs_meta"] # Documentation for core entities & components
flecs_log = [] # When enabled ECS provides more detailed logs
flecs_app = ["flecs_pipeline"] # Application addon
flecs_os_api_impl = [] # Default implementation for OS API
flecs_http = [] # Tiny HTTP server for connecting to remote UI
flecs_rest = ["flecs_http", "flecs_json", "flecs_rules", "flecs_pipeline"] # REST API for querying application data
flecs_journal = ["flecs_log"] # Journaling addon (disabled by default)
default = [
    "flecs_meta_c",
]


