[package]
name = "flecs_ecs_tracing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
flecs_ecs = { workspace = true }
hashbrown = { workspace = true }
tracing-core = "0.1.32"
tracing = { version = "0.1.40", default-features = false }

[dev-dependencies]
# for doctest/example
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
], default-features = false }
# for perf_trace doctest/example
tracing-tracy = { version = "0.11.3", default-features = false }

[features]
perf_trace = ["flecs_ecs/flecs_perf_trace"]
